--- a/index.html
+++ b/index.html
@@ -4,18 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>What is Jeff baking?</title>
 
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -30,13 +23,65 @@
 
     <div class="jumbotron">
         <div class="container">
-          <h1>I'd be lying if I didn't say chocolate chip cookies.</h1>
+          <h1 class="display-3">I'd be lying if I didn't say <span>chocolate chip cookies</span>.</h1>
         </div>
     </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <div class="container">
+      <p class="lead">
+        This is my preferred recipe.
+      </p>
+    </div>
+
+    <div class="container">
+      <div class="media">
+          <div class="media-body">
+            <h4 class="mt-0">Perfect Chocolate Chip Cookies</h4>
+            <p>(from Cook’s Illustrated May/June 2009)</p>
+            
+            <figure class="figure">
+                <img src="/images/DSC_3545.jpg" class="figure-img img-fluid rounded" alt="A plate of chocolate chip cookies.">
+                <figcaption class="figure-caption">Notice the abundance of chocolate.</figcaption>
+            </figure>            
+            
+            <p>
+                1¾ cups unbleached all-purpose flour<br>
+                ½ teaspoon baking soda<br>
+                14 tablespoons unsalted butter<br>
+                ½ cup granulated sugar<br>
+                ¾ cup packed dark brown sugar<br>
+                1 teaspoon table salt<br>
+                2 teaspoons vanilla extract<br>
+                1 large egg<br>
+                1 large egg yolk<br>
+                1¼ cups semisweet chocolate chips or chunks (this is merely a starting point)
+            </p>
+
+            <p>
+              1. Adjust oven rack to middle position and heat oven to 375 degrees. Line 2 large baking sheets with parchment paper.
+            </p> 
+            <p>
+              2. Whisk flour and baking soda together in medium bowl; set aside.
+            </p>
+            <p>
+              3. Heat 10 tablespoons butter in a light colored skillet over medium-high heat until melted, about 2 minutes. Continue cooking, swirling pan constantly until butter is dark golden brown and has nutty aroma, 1 to 3 minutes. Keep an eye on it. Don't be afraid to push it to just about the point of burning. Remove skillet from heat and, using heatproof spatula, transfer browned butter to large heatproof bowl. Stir remaining 4 tablespoons butter into hot butter until completely melted.
+            </p>
+            <p>
+              4. Add both sugars, salt and vanilla to bowl with butter and whisk until fully incorporated. Add egg and yolk and whisk until mixture is smooth with no sugar lumps remaining, about 30 seconds. Let mixture stand for 3 minutes, then whish for 30 seconds. Repeat process of resting and whisking 2 more times until mixture is thick, smooth and shiny. Using rubber spatula or wooden spoon, stir in flour mixture until just combined, about 1 minute. Stir in chocolate chips, giving dough final stir to ensure no flour pockets remain.
+            </p>
+            <p>
+              5. Divide dough into 16 portions, each about 3 tablespoons (or use a #24 cookie scoop). Arrange 2 inches apart on prepared baking sheets, 8 dough balls per sheet.
+            </p>
+            <p>
+              6. Bake cookies 1 tray at a time until cookies are golden brown and still puffy, and edges have begun to set but centers are still soft, 10-14 minutes, rotating baking sheet halfway through baking. Transfer baking sheet to wire rack; cool cookies completely before serving. These are even better the second day.           
+            </p>
+          </div>
+        </div>
+    </div>
+
+    <footer class="container">
+      <hr>
+      <p>Thanks for stopping by. Bake on.</p>
+    </footer>
   </body>
 </html>
