add to the backlog

--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
         </div>
     </div>
 
+    <div class="container">
+      <hr>
+      <p class="lead">
+        This is my archive of baking events.
+      </p>
+      <ul>
+        <li>October 25, 2018: Rosemary Shortbread from Flour</li>
+        <li>October 23, 2018: Fudge Ball Cupcakes from Cupcakes!</li>
+        <li>October 15, 2018: Chocolate Chip Cookies</li>
+        <li>October 13, 2018: Apple Upside-down Cake from King Arthur</li>
+        <li>September 15, 2018: Flourless Chocolate Cake from King Arthur</li>
+        <li>July 27, 2018: Chocolate Chip Cookies</li>
+        <li>July 27, 2018: Strawberry Rhubard Ice Cream Sandwiches</li>
+        <li>July 24, 2018: Chocolate Chip Cookies</li>
+      </ul>
+    </div>
+
     <footer class="container">
       <hr>
       <p>Thanks for stopping by. Bake on.</p>
