adding more backlog

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         This is my archive of baking events.
       </p>
       <ul>
+        <li>October 26, 2018: Apple Upside-down Cake from King Arthur</li>
         <li>October 25, 2018: Rosemary Shortbread from Flour</li>
         <li>October 23, 2018: Fudge Ball Cupcakes from Cupcakes!</li>
         <li>October 15, 2018: Chocolate Chip Cookies</li>
