--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </p>
       <ul>
         <li>October 26, 2018: Apple Upside-down Cake from King Arthur</li>
-        <li>October 25, 2018: Rosemary Shortbread from Flour</li>
+        <li>October 25, 2018: Rosemary Shortbread from <a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=081186944X" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
         <li>October 23, 2018: Fudge Ball Cupcakes from Cupcakes!</li>
         <li>October 15, 2018: Chocolate Chip Cookies</li>
         <li>October 13, 2018: Apple Upside-down Cake from King Arthur</li>
@@ -94,6 +94,18 @@
         <li>July 27, 2018: Chocolate Chip Cookies</li>
         <li>July 27, 2018: Strawberry Rhubard Ice Cream Sandwiches</li>
         <li>July 24, 2018: Chocolate Chip Cookies</li>
+        <li>March 19, 2018: Baked Brownies from <a target="_blank" href="https://www.amazon.com/gp/product/1419715151/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1419715151&linkCode=as2&tag=wijb-20&linkId=f478b91e7fc586b7d92588a15a34b886">Baked Essentials: A Collection of Customer Favorites</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=1419715151" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
+      </ul>
+    </div>
+
+    <div class="container">
+      <hr>
+      <p class="lead">
+        These are my references and books.
+      </p>
+      <ul>
+        <li><a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=081186944X" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
+        <li><a target="_blank" href="https://www.amazon.com/gp/product/1419715151/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1419715151&linkCode=as2&tag=wijb-20&linkId=f478b91e7fc586b7d92588a15a34b886">Baked Essentials: A Collection of Customer Favorites</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=1419715151" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
       </ul>
     </div>
 
