--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
         This is my archive of baking events.
       </p>
       <ul>
+        <li>November 22, 2018: Pecan Pie Truffles from <a href="https://cooking.nytimes.com/recipes/1015214-pecan-pie-truffles">NYT Cooking</a></li>
+        <li>November 22, 2018: Sticky Cranberry Gingerbread from <a href="https://cooking.nytimes.com/recipes/1017758-sticky-cranberry-gingerbread">NYT Cooking</a></li>
         <li>October 26, 2018: Apple Upside-down Cake from King Arthur</li>
         <li>October 25, 2018: Rosemary Shortbread from <a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=081186944X" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
         <li>October 23, 2018: Fudge Ball Cupcakes from Cupcakes!</li>
