--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         This is my archive of baking events.
       </p>
       <ul>
+        <li>December 11, 2018: "HAM" Sugar Cookies from <a target="_blank" href="https://www.amazon.com/gp/product/1452113831/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1452113831&linkCode=as2&tag=wijb-20&linkId=823792df7e2e8a6275784fa8ba09739b">The Model Bakery Cookbook</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=1452113831" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /> and <a href="https://www.kingarthurflour.com/recipes/royal-icing-recipe">King Arthur</a></li>
         <li>November 22, 2018: Pecan Pie Truffles from <a href="https://cooking.nytimes.com/recipes/1015214-pecan-pie-truffles">NYT Cooking</a></li>
         <li>November 22, 2018: Sticky Cranberry Gingerbread from <a href="https://cooking.nytimes.com/recipes/1017758-sticky-cranberry-gingerbread">NYT Cooking</a></li>
         <li>October 26, 2018: Apple Upside-down Cake from King Arthur</li>
@@ -116,6 +117,7 @@
         <li><a target="_blank" href="https://www.amazon.com/gp/product/1607748363/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1607748363&linkCode=as2&tag=wijb-20&linkId=1c2b70315cfb2c6c128dc13ad822d63c">Crumb: A Baking Book</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=1607748363" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
         <li><a target="_blank" href="https://www.amazon.com/gp/product/1579654355/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1579654355&linkCode=as2&tag=wijb-20&linkId=23b1bdd81474b2d13f5555facde0de3a">Bouchon Bakery (The Thomas Keller Library)</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=1579654355" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
         <li><a target="_blank" href="https://www.amazon.com/gp/product/1607741024/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1607741024&linkCode=as2&tag=wijb-20&linkId=832fea21fc054a86948a8f1b56cc9bd7">Vintage Cakes: Timeless Recipes for Cupcakes, Flips, Rolls, Layer, Angel, Bundt, Chiffon, and Icebox Cakes for Today's Sweet Tooth</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=1607741024" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
+        <li><a target="_blank" href="https://www.amazon.com/gp/product/1452113831/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1452113831&linkCode=as2&tag=wijb-20&linkId=823792df7e2e8a6275784fa8ba09739b">The Model Bakery Cookbook: 75 Favorite Recipes from the Beloved Napa Valley Bakery</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=1452113831" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
       </ul>
     </div>
 
