--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 14 tablespoons unsalted butter<br>
                 ½ cup granulated sugar<br>
                 ¾ cup packed dark brown sugar<br>
-                1 teaspoon table salt<br>
+                1 teaspoon salt<br>
                 2 teaspoons vanilla extract<br>
                 1 large egg<br>
                 1 large egg yolk<br>
@@ -67,7 +67,7 @@
               3. Heat 10 tablespoons butter in a light colored skillet over medium-high heat until melted, about 2 minutes. Continue cooking, swirling pan constantly until butter is dark golden brown and has nutty aroma, 1 to 3 minutes. Keep an eye on it. Don't be afraid to push it to just about the point of burning. Remove skillet from heat and, using heatproof spatula, transfer browned butter to large heatproof bowl. Stir remaining 4 tablespoons butter into hot butter until completely melted.
             </p>
             <p>
-              4. Add both sugars, salt and vanilla to bowl with butter and whisk until fully incorporated. Add egg and yolk and whisk until mixture is smooth with no sugar lumps remaining, about 30 seconds. Let mixture stand for 3 minutes, then whish for 30 seconds. Repeat process of resting and whisking 2 more times until mixture is thick, smooth and shiny. Using rubber spatula or wooden spoon, stir in flour mixture until just combined, about 1 minute. Stir in chocolate chips, giving dough final stir to ensure no flour pockets remain.
+              4. Add both sugars, salt and vanilla to bowl with butter and whisk until fully incorporated. Add egg and yolk and whisk until mixture is smooth with no sugar lumps remaining, about 30 seconds. Let mixture stand for 3 minutes, then whisk for 30 seconds. Repeat process of resting and whisking 2 more times until mixture is thick, smooth and shiny. Using rubber spatula or wooden spoon, stir in flour mixture until just combined, about 1 minute. Stir in chocolate chips, giving dough final stir to ensure no flour pockets remain. If the dough looks too fluid, give it time to rest and firm up.
             </p>
             <p>
               5. Divide dough into 16 portions, each about 3 tablespoons (or use a #24 cookie scoop). Arrange 2 inches apart on prepared baking sheets, 8 dough balls per sheet.
