add activity to the backlog

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
         This is my archive of baking events.
       </p>
       <ul>
+        <li>May 14, 2019: Chocolate Chip Cookies from Cook’s Illustrated</li>
+        <li>May 11, 2019: <a href="https://www.dessarts.com/baked-homemade-churros-recipe">Baked churros</a> with <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/baked-mini-churro-bites-3365017">caramel-mango sauce</a> and malted fudge sauce</li>
         <li>April 21, 2019: Whoopie Pies from <a target="_blank" href="https://www.amazon.com/gp/product/1419715151/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1419715151&linkCode=as2&tag=wijb-20&linkId=f478b91e7fc586b7d92588a15a34b886">Baked Essentials: A Collection of Customer Favorites</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=1419715151" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
         <li>March 17, 2019: Chocolate Cake with Oreo Buttercream Frosting from <a target="_blank" href="https://www.amazon.com/gp/product/1607741024/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1607741024&linkCode=as2&tag=wijb-20&linkId=832fea21fc054a86948a8f1b56cc9bd7">Vintage Cakes: Timeless Recipes for Cupcakes, Flips, Rolls, Layer, Angel, Bundt, Chiffon, and Icebox Cakes for Today's Sweet Tooth</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=1607741024" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
         <li>February 17, 2019: Almond Flour Brownies from <a target="_blank" href="https://www.kingarthurflour.com/recipes/almond-flour-brownies-recipe">King Arthur</a></li>
