add missing books

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </p>
       <ul>
         <li>June 17, 2019: Vanilla Macarons with Chocolate Orange Ganache from Bouchon Bakery</li>
-        <li>June 16, 2019: Caraway Carrot Cake with Poppy Seeds from </li>
+        <li>June 16, 2019: Caraway Carrot Cake with Poppy Seeds from Crumb: A Baking Book</li>
         <li>May 23, 2019: Vanilla Macarons with Chocolate Ganache and <a href="https://www.marthastewart.com/349999/orange-curd">Orange Curd</a> from Bouchon Bakery</li>
         <li>May 14, 2019: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>May 11, 2019: <a href="https://www.dessarts.com/baked-homemade-churros-recipe">Baked churros</a> with <a href="https://www.foodnetwork.com/recipes/food-network-kitchen/baked-mini-churro-bites-3365017">caramel-mango sauce</a> and malted fudge sauce</li>
