add to the backlog

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
         This is my archive of baking events.
       </p>
       <ul>
+        <li>August 28, 2019: Mint Cookies and Cream Layer Cake from Milk Bar: All About Cake</li>
+        <li>August 27, 2019: Chocolate Chip Cookies from Cook’s Illustrated</li>
+        <li>July 10, 2019: Root Beer Bundt Cake from <a target="_blank" href="https://www.amazon.com/gp/product/1419715151/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1419715151&linkCode=as2&tag=wijb-20&linkId=f478b91e7fc586b7d92588a15a34b886">Baked Essentials: A Collection of Customer Favorites</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=1419715151" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
         <li>June 17, 2019: Vanilla Macarons with Chocolate Orange Ganache from Bouchon Bakery</li>
         <li>June 16, 2019: Caraway Carrot Cake with Poppy Seeds from Crumb: A Baking Book</li>
         <li>May 23, 2019: Vanilla Macarons with Chocolate Ganache and <a href="https://www.marthastewart.com/349999/orange-curd">Orange Curd</a> from Bouchon Bakery</li>
@@ -136,6 +139,7 @@
         <li><a target="_blank" href="https://www.amazon.com/gp/product/1452113831/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1452113831&linkCode=as2&tag=wijb-20&linkId=823792df7e2e8a6275784fa8ba09739b">The Model Bakery Cookbook: 75 Favorite Recipes from the Beloved Napa Valley Bakery</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=1452113831" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
         <li><a target="_blank" href="https://amzn.to/2TWL6v8">Chocolate Epiphany</a></li>
         <li><a target="_blank" href="https://amzn.to/2EgB6HI">In the Sweet Kitchen: The Definitive Baker's Companion</a></li>
+        <li><a target="_blank" href="https://milkbarstore.com/collections/cookbooks/products/milk-bar-all-about-cake">Milk Bar: All About Cake</a></li>
       </ul> 
     </div>
 
