add madeleines and choco cookies

--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
       <ul>
         <li>August 28, 2019: Mint Cookies and Cream Layer Cake from Milk Bar: All About Cake</li>
         <li>August 27, 2019: Chocolate Chip Cookies from Cook’s Illustrated</li>
+        <li>August 6, 2019: Honey and Spice Madeleines from In the Sweet Kitchen</li>
+        <li>August 6, 2019: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>July 10, 2019: Root Beer Bundt Cake from <a target="_blank" href="https://www.amazon.com/gp/product/1419715151/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1419715151&linkCode=as2&tag=wijb-20&linkId=f478b91e7fc586b7d92588a15a34b886">Baked Essentials: A Collection of Customer Favorites</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=1419715151" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
         <li>June 17, 2019: Vanilla Macarons with Chocolate Orange Ganache from Bouchon Bakery</li>
         <li>June 16, 2019: Caraway Carrot Cake with Poppy Seeds from Crumb: A Baking Book</li>
