add to the backlog

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
         This is my archive of baking events.
       </p>
       <ul>
+        <li>September 6, 2019: Chocolate Cake with Vanilla Frosting from Vintage Cakes</li>
+        <li>August 30, 2019: Whole Grain Banana Bread from <a href="https://www.kingarthurflour.com/recipes/whole-grain-banana-bread-recipe">King Arthur</a></li>
         <li>August 28, 2019: Mint Cookies and Cream Layer Cake from Milk Bar: All About Cake</li>
         <li>August 27, 2019: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>August 6, 2019: Honey and Spice Madeleines from In the Sweet Kitchen</li>
@@ -142,6 +144,7 @@
         <li><a target="_blank" href="https://amzn.to/2TWL6v8">Chocolate Epiphany</a></li>
         <li><a target="_blank" href="https://amzn.to/2EgB6HI">In the Sweet Kitchen: The Definitive Baker's Companion</a></li>
         <li><a target="_blank" href="https://milkbarstore.com/collections/cookbooks/products/milk-bar-all-about-cake">Milk Bar: All About Cake</a></li>
+        <li><a target="_blank" href="https://www.kingarthurflour.com/recipes">King Arthur Flour Recipes</a></li>
       </ul> 
     </div>
 
