add notes of chocolate

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 2 teaspoons vanilla extract<br>
                 1 large egg<br>
                 1 large egg yolk<br>
-                1¼ cups semisweet chocolate chips or chunks (this is merely a starting point)
+                1¼ cups semisweet chocolate chips or chunks *
             </p>
 
             <p>
@@ -75,6 +75,10 @@
             <p>
               6. Bake cookies 1 tray at a time until cookies are golden brown and still puffy, and edges have begun to set but centers are still soft, 10-14 minutes, rotating baking sheet halfway through baking. Transfer baking sheet to wire rack; cool cookies completely before serving. These are even better the second day.           
             </p>
+            
+            <p>
+              * This is merely a starting point. My current favorite blend is one part hand chopped Trader Joes Pound Plus 72% Dark Chocolate bar. One part Nestlé Toll House Semi-Sweet Morsels. One part broken Belcolade Bittersweet Discs 60% cocoa (courtesy King Arthur Flour).
+            </p>            
           </div>
         </div>
     </div>
