add to the archive

--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
         This is my archive of baking events.
       </p>
       <ul>
+        <li>November 23, 2019: Chocolate Chip Cookies from Cook’s Illustrated</li>
+        <li>November 20, 2019: Chocolate Chip Cookies from Cook’s Illustrated</li>
+        <li>November 20, 2019: Whole Grain Banana Bread (made gluten free) from <a href="https://www.kingarthurflour.com/recipes/whole-grain-banana-bread-recipe">King Arthur</a></li>
+        <li>November 15, 2019: My Ginger Cookies from Chewy Gooey Crispy Crunchy Melt-in-Your-Mouth Cookies</li>
+        <li>November 5, 2019: Chocolate Chip Cookies from Cook’s Illustrated</li>
+        <li>October 22, 2019: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>September 6, 2019: Chocolate Cake with Vanilla Frosting from Vintage Cakes</li>
         <li>August 30, 2019: Whole Grain Banana Bread from <a href="https://www.kingarthurflour.com/recipes/whole-grain-banana-bread-recipe">King Arthur</a></li>
         <li>August 28, 2019: Mint Cookies and Cream Layer Cake from Milk Bar: All About Cake</li>
@@ -148,6 +154,7 @@
         <li><a target="_blank" href="https://amzn.to/2TWL6v8">Chocolate Epiphany</a></li>
         <li><a target="_blank" href="https://amzn.to/2EgB6HI">In the Sweet Kitchen: The Definitive Baker's Companion</a></li>
         <li><a target="_blank" href="https://milkbarstore.com/collections/cookbooks/products/milk-bar-all-about-cake">Milk Bar: All About Cake</a></li>
+        <li><a target="_blank" href="https://www.amazon.com/Crispy-Crunchy-Your-Mouth-Cookies-Medrich/dp/1579653979">Chewy Gooey Crispy Crunchy Melt-in-Your-Mouth Cookies by Alice Medrich</a></li>
         <li><a target="_blank" href="https://www.kingarthurflour.com/recipes">King Arthur Flour Recipes</a></li>
       </ul> 
     </div>
