--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         This is my archive of baking events.
       </p>
       <ul>
+        <li>November 28, 2019: Old Fashioned Apple Cake with Brown Sugar Frosting from <a href="https://www.kingarthurflour.com/recipes/old-fashioned-apple-cake-with-brown-sugar-frosting-recipe">King Arthur</a></li>
         <li>November 23, 2019: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>November 20, 2019: Chocolate Chip Cookies from Cook’s Illustrated</li>
         <li>November 20, 2019: Whole Grain Banana Bread (made gluten free) from <a href="https://www.kingarthurflour.com/recipes/whole-grain-banana-bread-recipe">King Arthur</a></li>
