evey day i'm hustlin

--- a/index.html
+++ b/index.html
@@ -165,6 +165,16 @@
       </ul> 
     </div>
 
+    <div class="container">
+      <hr>
+      <p class="lead">
+        Hire me.
+      </p>
+      <p>
+        I would love to bake for you. Email me at <a href="mailto:jeff@whatisjeffbaking.com">jeff@whatisjeffbaking.com</a> and let me know what's on your mind.
+      </p>
+    </div>
+
     <footer class="container">
       <hr>
       <p>Thanks for stopping by. Bake on.</p>
