rearrange the sections

--- a/index.html
+++ b/index.html
@@ -86,7 +86,20 @@
     <div class="container">
       <hr>
       <p class="lead">
-        This is my archive of baking events.
+        <h4>Hire me.</h4>
+      </p>
+      <p>
+        I would love to bake chocolate chip cookies (or some other delicious creation) for you. 
+      </p>
+      <p>
+        Email me at <a href="mailto:jeff@whatisjeffbaking.com">jeff@whatisjeffbaking.com</a> and let me know what's on your mind.
+      </p>
+    </div>
+
+    <div class="container">
+      <hr>
+      <p class="lead">
+        <h4>This is my archive of baking events.</h4>
       </p>
       <ul>
         <li>December 15, 2019: Peanut Butter Cookies from <a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe</a></li>
@@ -348,7 +361,7 @@
     <div class="container">
       <hr>
       <p class="lead">
-        These are my references and books.
+        <h4>This is my reference library.</h4>
       </p>
       <ul>
         <li><a target="_blank" href="https://www.amazon.com/gp/product/081186944X/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=081186944X&linkCode=as2&tag=wijb-20&linkId=9296b95490330256fd87a534d9b91421">Flour: Spectacular Recipes from Boston's Flour Bakery + Cafe</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=wijb-20&l=am2&o=1&a=081186944X" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
@@ -363,16 +376,6 @@
         <li><a target="_blank" href="https://www.amazon.com/Crispy-Crunchy-Your-Mouth-Cookies-Medrich/dp/1579653979">Chewy Gooey Crispy Crunchy Melt-in-Your-Mouth Cookies by Alice Medrich</a></li>
         <li><a target="_blank" href="https://www.kingarthurflour.com/recipes">King Arthur Flour Recipes</a></li>
       </ul> 
-    </div>
-
-    <div class="container">
-      <hr>
-      <p class="lead">
-        Hire me.
-      </p>
-      <p>
-        I would love to bake for you. Email me at <a href="mailto:jeff@whatisjeffbaking.com">jeff@whatisjeffbaking.com</a> and let me know what's on your mind.
-      </p>
     </div>
 
     <footer class="container">
