update the alt text

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>(from Cook’s Illustrated May/June 2009)</p>
             
             <figure class="figure">
-                <img src="/images/DSC_3545.jpg" class="figure-img img-fluid rounded" alt="A plate of chocolate chip cookies.">
+                <img src="/images/DSC_3545.jpg" class="figure-img img-fluid rounded" alt="Three chocolate chip cookies on a plate.">
                 <figcaption class="figure-caption">Notice the abundance of chocolate.</figcaption>
             </figure>            
             
